# langgraph_langchan_agents_structure

./: .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
notebooks/: 01-basic-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag-basic.ipynb  10-conditions-to-routing.ipynb  11-parallel.ipynb  12-orchestrator-random-def.ipynb  notebook.ipynb
src/agents/: coder_checker.py  evaluator_optimizer_joke.py  main.py  orchestrator.py  rag-basic.py  react.py  simple-llm.py  simple-message.py  simple.py
src/agents/support_agent/: state.py  support_agent.py
src/agents/support_agent/nodes/booking/: node.py  prompt.py
src/agents/support_agent/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support_agent/nodes/extractor/: node.py  prompt.py
src/agents/support_agent/routes/intention/: prompt.py  route.py
src/api/: db.py  main-2.py  main.py
