[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-postgres>=3.0.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.0.1",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
